1. nurse rostering advanced

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -82,7 +82,7 @@
                                 <a class="nav-link {% if active_submenu == 'Nurse Rostering Demo' %}active{% endif %}" href="{% url 'resource_allocation_app:nurse_rostering_demo' %}">Demo</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'Nurse Rostering Advanced Demo' %}active{% endif %}" href="{% url 'resource_allocation_app:nurse_rostering_advanced_demo' %}">Advanced Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Nurse Rostering Advanced Demo' %}active{% endif %}" href="{% url 'resource_allocation_app:nurse_rostering_advanced_demo' %}">Advanced Demo</a>
                             </li>
 
 <!--                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">financial Portfolio</strong></li>-->
